feat!: Remove class descriptions and describe commands.
Removing this little-used feature to simplify maintenance of korrel8r.
It is not korrel8r's job to maintain access to documentation,
classes should be documented elsewhere (e.g. doc links to online reference material)
Getting K8s class descriptions is difficult when using dynamic REST mapping and discovery.
